修正不通顺语句

--- a/_posts/2016-11-06-动物庄园读后记.md
+++ b/_posts/2016-11-06-动物庄园读后记.md
@@ -4,7 +4,7 @@ layout: post
 categories: 读书
 ---
 
-读《动物庄园》之前，我已经知道这是一本关于政治和寓言书，并且知道里面的名言：
+读《动物庄园》之前，我已经知道这是一本关于政治的寓言书，并且知道里面的名言：
 
 > 所有动物生而平等，但有些动物更加平等
 
@@ -60,7 +60,7 @@ categories: 读书
 
 在我看来自由与民主是对矛盾。动物包含最初的人类一定是自由的，因为它们只需要为自己负责；但这种自由不一定的高效的、或幸福的。人类为了获得更大利益和更小的风险陆续地选择放弃一部分自由，以换取群体或社会的保护和支持，这便是社会。人类的进步则是扩大社会生产与获取个人自由的斗争与博弈。
 
-这种博弈并不一定公平：放弃自由易，因为它是个体的行为；获取自由难，因为那是不再是集体的行为。
+这种博弈并不一定公平：放弃自由易，因为它是个体的行为；获取自由难，因为那是不再是个体的行为。
 
 无论是“少数服从多数”的民主，还是投票人制度与“精英治国”，都是对个体自由的控制，并且希望更大的控制。自由、民主都是抽象的概念，而抽象是少数精英和政治家因为“智力卓越”的发明，对于普通大众，我们能接受的是具体化形象。这个抽象概念形象化的权力，正是政治家们追逐的所谓话语权和施政理念。无论是“为了更大的好”，或是“集体至上”，或是“和平既平安、拥有既丰富”，或是“精英治国” ，都不可避免的使权力集中于少数同样追求个人自由的个体手中，这恐怕是对“自由”的最大威胁。
 
