--- a/_posts/2017-03-26-攻壳机动队.md
+++ b/_posts/2017-03-26-攻壳机动队.md
@@ -12,7 +12,7 @@ tag: 观后感
 
 最大的惊艳在于画风，难以想象的昏暗而多雨的、充满世俗城市街景的、写实的画面，和硬朗的、冰冷的人体的线条。从剧情设计上，我认为即使以当下的技术，也拍不出真人版的更好的效果了。
 
-故事的里关于人性和存在的细节讨论比整个大剧情更能让人触动。这并不是因为剧情不够优秀，而是整个故事要讨论的问题过于哲学化、过于超前，不是我们任何一个没有身临其境的人，亦或是能轻巧的承认自己已经掌握其中真理的问题。
+故事的里关于人性和存在的细节讨论比整个大剧情更能让人触动。这并不是因为剧情不够优秀，而是整个故事要讨论的问题过于哲学化、过于超前，不是我们任何一个没有身临其境的人，能轻巧的承认自己已经掌握其中真理的问题。
 
 草雉探员以及众多九科的探员无不利用义体科技来改造自己。大多数人可能会对当自己的存在——当身体的每个部件都不是自己，甚至自己的记忆、未来都是电子脑的存储时——产生一些疑惑。但设身处地的想，只要我们还以一个独立的个体存在里，没人会质疑自己存在的合理性。所以他们隐约疑虑自己的身份的同时，也在不遗余力的追捕傀儡师——另一个没有真实存在为基础的、自认为的“生命体”。
 
@@ -24,4 +24,4 @@ tag: 观后感
 
 我们是在一个圈子里，固执地守着自己的价值观：正确的、错误的、顽固的、开放的。或许只有时间才能让我们摆脱这一圈子而进入下一个圈子。古之视今亦如今之视古。
 
-傀儡师比我们更了解生命的意义，特别是在拥有我们难以想象的能力后。顽强的活下去，但不止于个体的生存，而会为了适应不断的变化——固然这种变化可能是痛苦的、需要放弃个人的利益得失的——作出变化。不过不是为了变化而变化，一定会有最大的目标，同时也应放弃路上的风景。
+傀儡师比我们更了解生命的意义，特别是在拥有我们难以想象的能力后。顽强的活下去，但不止于个体的生存，而会为了适应不断的变化——固然这种变化可能是痛苦的、需要放弃个人的利益得失的——作出变化。不过不是为了变化而变化，一定会有最大的目标，同时也不放弃路上的风景。
