--- a/_posts/2017-03-26-攻壳机动队.md
+++ b/_posts/2017-03-26-攻壳机动队.md
@@ -18,7 +18,7 @@ tag: 观后感
 
 就这一点想来，我们在平时置疑别人行为的时候，总是以自己或者至少是自以为的普世价值为标准点来出发的。
 
-再想来，这样的剧情——非主体意识觉醒——是否在历史上重复发生过呢。我想附会点的讲，在智人与尼安德特人同时存在而意识到双方是不同的时刻，在印第安人遇到探险者的时候，或许以后第三类接触时刻。我们总会排斥他方存在的合理性，因为只有这样才能解释我们存在的合理。
+再想来，这样的剧情——非主体意识觉醒——是否在历史上重复发生过呢。我想附会点的讲，在智人与尼安德特人同时存在而意识到双方是不同的时刻，在信众遇上异教徙时，在鲁宾逊看到荒岛上的脚印时，在印第安人遇到探险者的时候，在坚信的理论和经验被无情的摧毁时，也许第三类接触时刻。我们总会排斥他方存在的合理性，因为只有这样才能解释我们存在的合理。
 
 这是另一个基点临近的故事。实际上从中我们看到的有冰冷的机械战车，可以无意识地毁灭博物馆上生命之树的图谱而没有任何的避讳；看到科技工作人员改造后有无数手指、不用眨眼的完成工作。这与机器有什么不同？但又看到人工智能在政治上、军事上、国际形式上大行其道，看到傀儡师在寻求自己与人类无差别的身份、生存、死亡、繁殖的权力，看到草雉在完全义化后可以不惜毁坏肉身而要寻求一个答案。他们与我们又有什么不同？
 
