--- a/_posts/2017-02-02-命运-刘慈欣-读后记.md
+++ b/_posts/2017-02-02-命运-刘慈欣-读后记.md
@@ -1,6 +1,7 @@
 ---
 title: 《命运》读后记
 layout: post
+tags: 杂记
 ---
 
 看了刘慈欣的短篇小说《命运》。故事很简单，起因是主人公失误将 6500 万年前灭绝恐龙的小行星变成了地球卫星，后果是恐龙变成了世界的主宰，而人类则成为被圈养的“菜人”或“观赏人”。
