--- a/_posts/2017-09-14-巨人的陨落.md
+++ b/_posts/2017-09-14-巨人的陨落.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 title: 《巨人的陨落》读后记
-tags: 杂计
+tags: 杂记
 ---
 
-读完了巨人的陨落，并没有如封面上所讲三天之内看完。得承认，“三天看完”是不错的激励方式，让人在如此错综复杂的、离我们相当遥远、需要全力调动历史课知识才能读下来的体验中坚持读下来。
+读完了巨人的陨落，并没有如封面上所讲三天之内看完。得承认，“三天看完”是不错的激励方式，让人在如此错综复杂的、离我们相当遥远、需要全力调动历史课知识才能读下来的阅读体验中坚持读下来。
 
-书中以四个国家的不同主见、不同背景家族故事为线索，展示了上个世纪初二十年一战的整个面貌。故事的人过着几乎不可能有交集的生活，有着完全不同的主张和生活方式，却被一场帝国之间的大战联系在一起。相爱的人不能在一起，相敬的人要在战场上一较高下，个人意志被战争所扭曲。从人物的悲剧中讲述那个时代的悲剧。
+书中以四个国家的不同主见、不同背景家族故事为线索，展示了上个世纪初二十年一战的整个面貌。故事的人在几乎不可能有交集的轨迹上生活，有着完全不同的主张和处世方式，却被一场帝国之间的大战联系在一起。相爱的人不能在一起，相敬的人要在战场上一较高下，个人意志被战争所扭曲。从人物的悲剧中讲述那个时代的悲剧。
 
 阅读时，历史课上学习的知识被串了起来，历史上的人物跃然纸上。只在看过人物表后才让人意识到主人公并不真实存在：列宁没有一个老兵战友格里戈，而工党中也不会有一对矿工出身的姐弟，威尔逊总统没有助手格里在战前就与欧洲各个家庭建立如此广泛的联系。即使他们是虚构的，但身上一定有历史人物的影子。历史的前进中并不只是大人物留下足迹，更多的小人物的生活轨迹受到了力场的影响并反作用于其中。
 
