--- a/_posts/2017-09-16-火星救援.md
+++ b/_posts/2017-09-16-火星救援.md
@@ -10,8 +10,8 @@ tags: 杂记
 
 故事没有对孤独，特别是精神上的孤独进行大肆渲染。我认为这是合理的，一来他们是万中选一的宇宙人，本身就有足够的准备；二来生存压力不允许有过多的自怨自艾。反馈给读者的孤独是显而易见的，而对主人公孤独是要静下来是回味的。
 
-拯救计划一波多折，符合预期。最后的近地点接驳计划是如些的不靠谱——甚至比不上主人公自己的计划来得踏实，而又成功的有些不可思议，不免让人感觉有些仓促结尾之嫌。
+拯救计划一波多折，符合预期。最后的近地点接驳计划是如此的不靠谱——甚至比不上主人公自己的计划来得踏实，所以成功的有些不可思议，不免让人感觉有些仓促结尾之嫌。
 
-作为外星故事，将孤独无助营造最成功的一幕是得而复失的通讯工具。主人公只能通过摆布石头，用摩尔斯码来向地球示意。所有的一切都只能靠自己，但知道有人能看到自己，知道自己并不孤单，也是极大的慰藉。
+作为外星故事，将这种在前无古人的孤独无助营造最成功的是得而复失的通讯工具的一幕。主人公只能通过摆布石头，用摩尔斯码来向地球示意自己的行动。所有的一切都只能靠自己，但知道有人能看到自己，知道自己并不孤单，也是极大的慰藉。
 
 故事中展现出来全美国、全世界精诚团结的故事不知道是否会真的出现，如果有是否会混入太多的商业和政治目的。但我愿意看到这样的团结，在探索外太空时我们是一个流浪的文明整体，接我们的宇航员回来，不惜代价，且只能成功。
