--- a/_posts/2017-10-25-雪国列车.md
+++ b/_posts/2017-10-25-雪国列车.md
@@ -6,7 +6,7 @@ tag: 杂记
 
 忘了最先听说这部电影是在何时何地，大约是出差时听同事讲的，讲得绘声绘色。今天抽时间看了一遍。
 
-电影的名字很吸引人。可我奇怪地联想到红白机上的通关游戏，剧情不加修改就可以作为游戏主线，主人公从末节加车厢往首节车厢前进，要去单挑对最终的 BOSS，而又不交待打过之后能否解决问题。一路上各种打斗、冒险，遇到了各种迥异的人物和风格各异的车厢。就这样一扇门一扇门地闯过去，你永远不知道下一个门里是怎样的世界。车厢世界的人同我们完全没有交集：既不了解，也不愿意了解我们为何来这里、为什么不满足现状、为什么前进；而我们也无法理解他们那种生而俱来的优越感，为他们不思进取、不懂珍惜而愤慨。
+电影的名字很吸引人。可我奇怪地联想到红白机上的通关游戏，剧情不加修改就可以作为游戏主线，主人公从末节车厢往首节车厢前进，要去对决最终的 BOSS，也不交待问题如何解决。主人公一路上各种打斗、冒险，遇到了各种迥异的人物和风格各异的车厢。就这样一扇门一扇门地闯过去，永远不知道下一个门里是怎样的世界。车厢世界的人同我们完全没有交集：既不了解，也不愿意了解我们为何来这里、为什么不满足现状、为什么前进；而我们也无法理解他们那种生而俱来的优越感，为他们不思进取、不懂珍惜而愤慨。
 
 末节车厢是见过苦难的人，徘徊在追求最基本的生存与自由的人。他们更能坚定的反抗束缚，不与任何不自由妥协。但是人总要受认识的束缚，即便是那些头等座的、自以为是的人。殊不知整个列车是一个小的社会，是完整的生态系统，是人为维持平衡的阶级社会。阶级内的上下起伏，权贵的易位，并不能解决资源有限的根本问题，甚至是上层有意为之，我们不过刍狗尔。
 
