--- a/_posts/2017-11-12-历史转换中的邓小平.md
+++ b/_posts/2017-11-12-历史转换中的邓小平.md
@@ -16,4 +16,4 @@ tags: 杂记, 心得
 
 看看我们自己：忘记幸福和安定来之不易，认为这是理所应当的，不知珍惜； 忘记艰苦朴素、拼搏奋斗的生活态度，变得苟且且势利；忘记当年对领袖英雄的崇拜、感恩戴德或溜须拍马，归结为思想不成熟、少不经事。当身患重症时我们发誓，只要能挺过去一定加强锻炼、保重身体；面对未准备的考试我们发誓下次一定要作万全准备；面对困难无能为力时，企盼有人从天而降为我们排忧解难。事过境迁，我们多半会选择遗忘，更甚者变本加利或倒戈一击。归根到底，我们是情境动物，一时的冲动与感动只能为我们增添乐趣或作为枯燥生活的调剂。而我们不应只是情境动物，当有一种可以超越时间和当下的理性，记忆过去，以史为鉴便是这种理性的表现。
 
-一段历史，需要不断被提起因为它确有重大的意义，而需要通过提起来唤醒人们的记忆也是一种悲哀。但愿歌词据说，从来不需要想起，永远也不会忘记。前事不忘，后事之师。
+一段历史，需要不断被提起因为它确有重大的意义，而需要通过提起来唤醒人们的记忆也是一种悲哀。但愿歌词所说，从来不需要想起，永远也不会忘记。前事不忘，后事之师。
