修正文章分类

--- a/_posts/2017-11-12-历史转换中的邓小平.md
+++ b/_posts/2017-11-12-历史转换中的邓小平.md
@@ -1,7 +1,7 @@
 ---
 title: 《历史转换中的邓小平》小说读后记
 layout: post
-tags: 杂记, 心得
+tags: 杂记 心得
 ---
 
 本书讲述 1976 到 1984 年间邓小平第三次复出后，主持科学、军队工作，恢复高考，关于真理问题大讨论，十一届三中全会，形成第二代领导核心、农业生产包产到户，中美建交，建立深圳特区，中英香港问题谈判一系列重大历史事件。使我们切实感受到邓公和老一辈同志们筚路蓝缕、力挽狂澜、解开思想桎梏的伟大决心和务实手段。
