添加冰与火之歌中故事梗概

--- a/_posts/2017-11-19-权力的游戏-故事梗概.md
+++ b/_posts/2017-11-19-权力的游戏-故事梗概.md
@@ -61,3 +61,38 @@ tags: 杂记
 艾德开始着手调查前首相琼恩·艾林死因，并不蹊跷之处。不过经小指头的提醒，他发觉自己身边尽是无处不有的监视。为了得到真正的调查结论，他只能让手下可信任的人继续调查。
 
 琼恩在守夜人队伍中有了自己的圈子和朋友，成长的不幸让他坚信兄弟友情。他帮助新人山姆威尔·塔利在此立足，走上一条与众不同的成就守护者之路。
+
+
+# 冰与火之歌（中）
+
+艾德为国王发起的比武大会烦心不已。同时仍在追查前首相琼恩死因上有所突破：琼恩曾试图调查过国王在民间的私生子。
+
+回程的凯瑟琳在旅馆中遇上了回程的提利昂，坚信他就是刺杀爱子凶手，凯瑟琳请求附庸骑士们出手擒拿了提利昂，并避开大道往东方鹰巢城前行。鹰巢城有自己的妹妹——琼恩大人的遗孀在坐阵。这一路并不顺利，途中遇上匪徒伤亡惨烈。提利昂知道逃跑无望，于是也认命随行。不过他对小指头的指控提出异议，小指头只爱小指头自己。
+
+比武大会前四强决出，分别是魔山格雷果·克里岗（兰尼斯特家臣），桑铎·克里岗（王子乔里佛侍卫），詹姆·兰尼斯特以及洛拉斯·提利尔（南境守护之子）。桑铎与格雷果兄弟之间似有深仇大恨，而宴席上国王与王后的冲突愈加明显，不欢而散。
+
+决赛中桑铎胜了詹姆并成为冠军，而格雷果与洛拉斯对决中违规被逐出比赛。艾德了解后党的不臣之心，正要向国王秉报，而太监瓦里斯主动上门，告诉他一个惊天秘密：兰尼斯特正欲置国王于死地，同时也挑明了前首相正因为察觉后党的动机而被下了“里斯之泪”毒毙。
+
+艾莉亚刻苦练习水舞步，无意中闯入密室，惊闻巫师和一商人密谋挑动王后与首相之争。尽管不了解其话语的意义，她还是迅速向父亲转述这不寻常的听闻。
+
+劳勃国王派人暗杀有身孕的前朝公主丹妮，艾德拒绝这种杀害妇孺的暴行，为此不惜与国王翻脸。而守夜人带来凯瑟琳擒拿之提利昂之事也坚定了他北归临冬城的决心。他最后一次调查艾林死因，并惊恐的意识到也许乔里佛并非国王亲生。兰尼斯特借提利昂被扣一事发飙，在他回城途中遭到詹姆围杀，手下死伤惨重，自己也被压断了腿。
+
+凯特琳经历千难万险到了鹰巢城，却发现艾林之子在自己妹妹的娇惯下完全是个温室里的小花。妹妹也变得时而傲慢，时而忧惧，又或残忍，甚至空幻而不切实际，粗心大意，怯懦怕事而好大喜功的妇人一个。更糟糕的是她还变化无常。无怪乎东境民众对这个小的艾林继承人感到担忧。
+
+提利昂受尽鹰巢城天牢之苦。莱莎·徒利傲慢地为他加上两个罪名：谋害前首相和刺杀布兰。提利昂反应很快，他想到一定是有人拿他当替死鬼，或许冰原狼和狮子并非森林里仅有的猛兽。他借莱莎傲慢提出要通过决斗来决定自己的生死，并成功的靠佣兵获胜。莱莎只得释放提利昂。凯特瑟为之气结，妹妹不仅不识时务，甚至不愿助徒利家族来抵抗兰尼斯特的报复。
+
+布兰与罗柏出城放风，受到逃兵与野人的偷袭，虽转危为安，但也为临冬城不安现状敲响警钟。罗柏考虑招集部众南下作战。
+
+国王劳勃坚持让艾德出任首相，但对后党的专权并无好的办法。而徒利与兰尼斯特家族的冲突愈演愈烈，双方屯兵边界，不时试探。家园被毁的百姓向国王请命，而国王此时正在狩猎，首相艾德代国王下命，要求诛杀首恶魔山格雷果·克里岗。
+
+琼恩等八人完成了新兵训练，即将成为守夜人。他推荐山姆威尔·塔利加入守夜人，认为守夜人部队应该量材而用，因人而异。
+
+丹妮莉丝在多斯拉克圣城接受了对腹中胎儿的宗教仪式。人们预言这个新生命将骑上世界的骏马，确保整个世界。而韦赛里斯终于为自己的傲慢与无知负出代价，戈奥亲自为他头上浇上黄金熔化的汁水，为他“铸造”王冠。看来他并不是真龙，真龙是不怕火的。
+
+艾德安排妥当送走两个女儿的事情后，半夜被召至王宫。担心的事情终于发生了，国王在狩猎时为野猪所重伤，眼见活不成了。国王弥留时任命艾德辅佐他的儿子成为新君。艾德不忍告诉老友乔佛里并非他亲生这一事实，但已打定主意让国王的弟弟史坦尼斯继位。他拉拢小指头寻求帮助，不料却被愚蠢的女儿珊莎和小指头出场。兰尼斯特对君临城的史塔克进行了大肆的屠杀。只有艾利亚在她的剑术老师的保护下逃过一动，借着上次探得的密道到地窖中暂避。
+
+琼恩与伙伴们宣誓成为守夜人：“倾听我的誓言，做我的见证。长夜将至，我从今开始守望，至死方休。我将不娶妻，不封地，不生子。我将不戴宝冠，不争荣宠。我将尽忠职守，生死于斯。我是黑暗中的利剑，长城上的守卫，抵御寒冷的烈焰，破晓时分的光线，唤醒眠者的号角，守护王国的坚盾。我将生命与荣耀给守夜人，今夜如此，夜夜皆然。” 不过琼恩并没能如愿成为如同班扬叔叔一样的游骑兵。而被指派成为莫尔蒙司令的助手，这对他是个不小的机遇。
+
+艾德首相篡权的谣言传到七大王国，甚至琼恩也得知了君临的变故。而同时，守夜人在长城外找到了班扬的两名手下的尸体。尸体在当夜发生尸变，幸好琼恩警觉，也及时救下了莫尔蒙总司令。
+
+王后诱导珊莎为临冬城、鹰巢城及徒利家写去劝降信。一场冰原狼与黄金雄狮之间的斗争一触即发。
