提交权力的游戏下故事梗概

--- a/_posts/2017-11-19-权力的游戏-故事梗概.md
+++ b/_posts/2017-11-19-权力的游戏-故事梗概.md
@@ -4,7 +4,7 @@ title: 《权力的游戏》故事梗概
 tags: 杂记
 ---
 
-# 冰与火之歌（上）
+# 权力的游戏（上）
 
 守夜人罗依斯、盖瑞、威尔远出长城追踪野人的足迹。怪异的是，当再次来到先前威尔侦查到的七八个野人冻毙的现场，却没完没有任何野人的踪迹。突然异鬼袭击了罗依斯一行，杀死罗依斯，并把他同化成了异鬼。我们的故事从这不同寻常的异变开始。
 
@@ -16,7 +16,7 @@ tags: 杂记
 
 国王与艾德从小在鹰巢城玩大，并在当年反抗疯王坦格利安中同仇敌忾。国王劳勃喜欢艾德的小妹妹，不幸的是她在战争中染病故去。直到今日国王仍难以释怀。来到临冬城便即去史塔克陵寝中祭奠故去的爱人，即使知道这样会让皇后不悦。
 
-国王来到临冬城并非只为緒旧，更大的原因是为了请艾德去南方，接替故去的艾林，做王国的首相。显然，国王也意识到了什么，而艾德作为北境守护也为自己的南行忧心不已。
+国王来到临冬城并非只为叙旧，更大的原因是为了请艾德去南方，接替故去的艾林，做王国的首相。显然，国王也意识到了什么，而艾德作为北境守护也为自己的南行忧心不已。
 
 艾德有四子二女，其中私生子琼恩不为夫人凯特琳待见。虽然艾德一视同仁，但却不得不考虑他离开后琼恩的出路。相比待在临冬城内，看着兄弟们继承王国，琼恩更愿意追随艾德的兄弟——班扬去长城，放弃一切，终其一生作一个守夜人，守护北境的平安。
 
@@ -63,7 +63,7 @@ tags: 杂记
 琼恩在守夜人队伍中有了自己的圈子和朋友，成长的不幸让他坚信兄弟友情。他帮助新人山姆威尔·塔利在此立足，走上一条与众不同的成就守护者之路。
 
 
-# 冰与火之歌（中）
+# 权利的游戏（中）
 
 艾德为国王发起的比武大会烦心不已。同时仍在追查前首相琼恩死因上有所突破：琼恩曾试图调查过国王在民间的私生子。
 
@@ -96,3 +96,39 @@ tags: 杂记
 艾德首相篡权的谣言传到七大王国，甚至琼恩也得知了君临的变故。而同时，守夜人在长城外找到了班扬的两名手下的尸体。尸体在当夜发生尸变，幸好琼恩警觉，也及时救下了莫尔蒙总司令。
 
 王后诱导珊莎为临冬城、鹰巢城及徒利家写去劝降信。一场冰原狼与黄金雄狮之间的斗争一触即发。
+
+
+# 权力的游戏（下）
+
+罗柏代临冬城城主，积极备战。他招集封侯，以超出年龄的胆识和勇气臣服诸侯。无论布兰还是瑞肯均对兄长此行表示担忧，但无法阻止南下的大军。凯特琳与罗柏大军相聚，他们将面对泰温大人和詹姆·兰尼斯特大军的双线进攻。他们决定分兵两路，一路与泰温正面作战，一路挺进奔流城袭击詹姆。
+
+
+
+乔佛里继位后作用兰尼斯特家族及家臣，带走了忠心不二的老御前铁卫队长巴利斯坦，任人唯亲。而珊莎仍幻想新国王能对父亲网开一面，却不知臣服便意味终结。此刻艾德被囚于牢中，太监瓦里斯是第一个来探望他的人。瓦里斯向艾德示好，并表示他并不属于王后或小指头任何一派，甚至不属于国王。他只希望国家能免于灾难。他劝说艾德同意向兰尼斯特认罪，以避免更大规模的冲突升级。为此，他保证艾德的家人将不受牵连。
+
+但瓦里斯显然高估了新国王的气量。艾德在众人着认罪，年轻的国王不顾众大臣甚至母后的反对，执意砍掉了艾德的脑袋。雷加、劳勃、艾德老一辈的故事就此谢幕。
+
+而登基后的乔佛里变得更加傲慢与暴虐，他折磨珊莎，也不喜欢母后插手自己的权力。对于影响他权力的人或事他一视同仁的恨。
+
+在此同时丹妮莉丝受到酒商下毒。正苦于不知如何鼓动戈奥跨海征服七大王国的她有了十分充足的理由。坦格利安的血液在她的身体复苏，她要让儿子成为七国之主，夺回那张铁椅。
+
+随后卓戈战胜并杀灭了草原上另一霸主奥戈，丹妮莉丝发善心救下许多妇人，包括一位自称精通医术和巫术的老妇人弥丽。似乎是天意，卓戈因拒绝使用外族的医疗手段，伤口化脓，生命垂危。丹妮利丝力排众议同意弥丽以巫术治疗卓戈，但终于太晚了，卓戈虽保住性命，但却不能苏醒。按传统他的血盟卫将同卓戈同生同死，眼见生存无忘，血盟卫暴起杀戮。危急关头，丹妮莉丝生子早夭，部众纷纷离去。
+
+接踵而至的灾难让丹妮丽丝几近崩溃，看着植物人般的卓戈，她用枕头为他解脱痛苦。
+
+从鹰巢城脱身的提利昂，与他的原住民“朋友”回到泰温军中，正是当初被擒的小酒店。泰温对于史塔克的进攻表现的傲慢而自信。
+
+而史塔克大军由卢斯·波顿牵制泰温，罗柏于奔流城与徒利家族内外夹击以不小的代价击败并活捉不可一世的詹姆·兰尼斯特。
+
+艾德大人的死讯以各种方式传到他的子女亲人身边。临冬城的布兰和瑞肯于前一夜同时梦到了父亲在先族的陵墓中茕茕而立；罗柏与母亲在战争路上得知悲伤的消息；琼恩在守夜人的兄弟和莫尔蒙将军的安慰下放下南归的念头。
+
+史塔克与兰尼斯特之战后，天下陷入纷乱。蓝礼·拜拉席恩在南方的高庭娶了玛格丽·提利尔为妻，登基称王。而史坦尼斯·拜拉席恩佣兵龙石岛。兰尼斯特家族控制君临城，而泰温公爵仍有强大兵力。卢斯·波顿于北，东边有艾林家族。而在奔流城与徒利家族会师的罗柏，在双方诸侯的战时会议上被推举为冬境之王。而火葬了卓戈的丹妮莉丝觉醒了龙的血脉，借火葬之焰孵化出三只龙，被乔里和余下的部众尊为女王陛下。
+
+群雄并起，天下大乱！
+
+
+# 语录
+
+## 伊蒙·坦格利安（守夜人学士）
+
+> 我们身为凡人，天人诸神使我们有能力去爱，那是对我们最美好的恩赐，却也是我们是深沉的悲哀。当一个人无所畏惧时，即使懦夫也能展现不输于人的勇气。当我们毋须付出代价时，自然都能尽忠职守。行走在这条荣耀的大道上，似乎是那么的容易。然而，每个人的生命中迟早会遇到考验，那便是他必须作抉择的时候
