修正错别字

--- a/_posts/2017-11-19-权力的游戏-故事梗概.md
+++ b/_posts/2017-11-19-权力的游戏-故事梗概.md
@@ -104,7 +104,7 @@ tags: 杂记
 
 
 
-乔佛里继位后作用兰尼斯特家族及家臣，带走了忠心不二的老御前铁卫队长巴利斯坦，任人唯亲。而珊莎仍幻想新国王能对父亲网开一面，却不知臣服便意味终结。此刻艾德被囚于牢中，太监瓦里斯是第一个来探望他的人。瓦里斯向艾德示好，并表示他并不属于王后或小指头任何一派，甚至不属于国王。他只希望国家能免于灾难。他劝说艾德同意向兰尼斯特认罪，以避免更大规模的冲突升级。为此，他保证艾德的家人将不受牵连。
+乔佛里继位后作用兰尼斯特家族及家臣，赶走了忠心不二的老御前铁卫队长巴利斯坦，任人唯亲。而珊莎仍幻想新国王能对父亲网开一面，却不知臣服便意味终结。此刻艾德被囚于牢中，太监瓦里斯是第一个来探望他的人。瓦里斯向艾德示好，并表示他并不属于王后或小指头任何一派，甚至不属于国王。他只希望国家能免于灾难。他劝说艾德同意向兰尼斯特认罪，以避免更大规模的冲突升级。为此，他保证艾德的家人将不受牵连。
 
 但瓦里斯显然高估了新国王的气量。艾德在众人着认罪，年轻的国王不顾众大臣甚至母后的反对，执意砍掉了艾德的脑袋。雷加、劳勃、艾德老一辈的故事就此谢幕。
 
