set image width

--- a/_posts/2019-03-02-《山城棒棒军》观后记.md
+++ b/_posts/2019-03-02-《山城棒棒军》观后记.md
@@ -24,7 +24,7 @@ layout: post
 
 * 蛮牛是个老实到不能再老实的汉子，回乡前一晚与入室强盗搏斗，成了烈士，让人唏嘘。
 
-* 孟小渝大概是村里姑娘”小芳“的儿子，有知青生父的暗中帮助，得到好心的胡教授的提点，一面当棒棒一面复习考上了大学。据说在第二部中腐败变质了，又是唏嘘。
+* 孟小渝是村里姑娘”小芳“的儿子，有知青生父的暗中帮助，得到好心的胡教授的提点，一面当棒棒一面复习考上了大学。据说在第二部中腐败变质了，又是唏嘘。
 * 张淑惠到巴倒烫店里当服务员，想学好手艺自己也开个火锅店。动摇了巴倒烫胖姨妈在店里的地位，让巴总好生不好过，自己的丈夫也是没少吃醋。
 * 于芳由于哥哥要拿自己换亲，跑到成里，凭着过人的胆识和眼光打拼成了厂长。天长的危机公关还有打造企业文化本事，现在看也是好手。
 * 江疯子在棚里存在感不高，为人正派，有点文化。后来才知道他还是生产队队长，没少帮乡亲做事，来补偿以前的过失。
@@ -32,5 +32,4 @@ layout: post
 
 ![最后的棒棒](/images/最后的棒棒/climb.png)
 
-最后以剧中最后梅老坎唱着号子，指挥棒棒们抬着巨大的工件上坡的剧照作为结束。此剧在2006年还拍过第二部，里面人物也许有自己的生活和变化，但我觉得故事已经讲完了。2015年的纪录片《最后的棒棒》，导演何苦和他们同吃同住，讲述了仅存的几个棒棒的生活，为棒棒这个即将消逝的行业立下纪念碑，让后人能想起那些笨拙的人们，他们用汗水和棒棒抬出了现在，抬走了自己的时代。
-
+用剧中最后梅老坎唱着号子，指挥棒棒们抬着巨大的工件上台阶的剧照作为结束吧。此剧在2006年还拍过第二部，但我觉得他们的故事已经讲完。2015年的纪录片《最后的棒棒》，导演何苦和仅存的几个棒棒同吃同住同劳动，为这个即将消逝的行业立下纪念碑，让后人能想起那些笨拙的人们，他们用汗水和棒棒抬出了现在，抬走了自己的时代。
