--- a/_posts/2017-02-03-白垩纪往事-刘慈欣-读后记.md
+++ b/_posts/2017-02-03-白垩纪往事-刘慈欣-读后记.md
@@ -1,7 +1,7 @@
 ---
 title: 《白垩纪往事》读后记
 layout: post
-tags: 杂记
+tags: 读书
 ---
 
 篇名很容易让人联想到《地球往事三部曲》，虽然不及后者那样的宏大，而且无论恐龙或是蚂蚁都不能给人以直接的共鸣，但依然能给人留下足够的想象空间。
