--- a/_posts/2017-06-17-恰同学少年.md
+++ b/_posts/2017-06-17-恰同学少年.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 《恰同学少年》读后记
-tag: 杂记
+tag: 杂文
 ---
 
 将这本书列在书单上有些时间了，但一直没有读下去。记忆中前几年播出过这部电视剧，但对于爱国主义、心灵鸡汤、立志教育等体裁我有一种本能的反感。不是对其内容，而是因为接收了过多的这方面的教育，而与实践脱节，行知无法合一，看得越多越是困惑，因此不愿意多看。脱开上下文谈任何东西都是耍流氓。时代不同，背景不同，伟大人物的少年时候必定是如此卓而不群，与我们现在的蝇营狗苟是如此不可同日而语，我也不确定自己是否有力去接受如此强烈的对比与教育。
