--- a/_posts/2017-06-21-新东方快车谋杀案.md
+++ b/_posts/2017-06-21-新东方快车谋杀案.md
@@ -1,7 +1,7 @@
 ---
 title: 《新东方快车谋杀案》观后记
 layout: post
-tag: 杂记
+tags: 杂文 电影
 ---
 
 受福尔摩斯和柯南等经典形象的影响，提到侦探，我容易联想到的是智力超群，颇有些神经质，可能在生活中邋遢颓废且情商不高，还可能在科学技术和理性思考能力上有特殊能力，不会为经典的方法论和世俗的教条所约束的怪人。但是波罗则有所不同，并不神经质，而且一脸严肃认真、留着一丝不苟的胡子。既刻板（从他需要有两个一样大小的鸡蛋作早餐以及睡前把珠串码放的整整齐齐可见一斑）又笃信宗教（电影中特意把他与唯一的恶人祈祷做了对比）。因此侦探中，波罗对我的吸引力小很多，显得太过中正，而不接地气。
