--- a/_posts/2017-09-14-巨人的陨落.md
+++ b/_posts/2017-09-14-巨人的陨落.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 《巨人的陨落》读后记
-tags: 杂记
+tags: 杂文
 ---
 
 读完了巨人的陨落，并没有如封面上所讲三天之内看完。得承认，“三天看完”是不错的激励方式，让人在如此错综复杂的、离我们相当遥远、需要全力调动历史课知识才能读下来的阅读体验中坚持读下来。
