--- a/_posts/2018-05-05-萤火虫之墓观后记.md
+++ b/_posts/2018-05-05-萤火虫之墓观后记.md
@@ -1,7 +1,7 @@
 ---
 title: 萤火虫之墓观后记
 layout: post
-tag: 电影
+tags: 杂文 电影
 ---
 
 这部电影第一次只看了小半，便放弃了，因为太压抑。明知故事的结局——“昭和二十年九月二十一日，我将死去”——还要看着主人公向着宿命前去。节子的可爱，清太的坚持，周围人的麻木，看得很是无奈。
