--- a/_posts/2018-05-08-褚时健传读后记.md
+++ b/_posts/2018-05-08-褚时健传读后记.md
@@ -1,7 +1,7 @@
 ---
 title: 《褚时健传》读后记
 layout: post
-tag: 读书
+tags: 读书 杂文
 ---
 
 遇到挫折和低谷时，总想找个榜样：看他如何在谷底反弹，看他如何被外界打击，未曾认输过。靠榜样的故事和激励自己，或者就是看看聊以自慰。
@@ -17,3 +17,4 @@ tag: 读书
 总觉得“哀牢山”在哪里听过。大概是山的名字太有特点，结合褚老经历显得很有琢磨劲儿。想了解褚老，一来因为我小时候在西北某小城的卷烟长成长，对红塔山、玉溪牌子有天然的亲近和敬畏感；二是因为褚老人生的大起大落，在耄耋之年还能坦然地重新站起，加上王石为他加持，让人尊敬。初看时，我会把“哀牢山”看成高人自我放逐、避世独立的精神象征。读过后觉得完全不是这样：哀牢山只是哀牢山，既不供伤逝而不是监牢。诚如作者所讲：褚时健理解自己的生活很轻，而别人看待他的生活却很重。
 
 每个人或许都有自己的“哀牢山”，成为自己失意后舔舐伤口的避难所，把失败后的孤独和落寞当成一种孤高。若沉溺于其中，用悲壮来做为故事的了结，将永陷伤逝不能自拔。我们都应该走出自己的“哀牢山”。
+
